# ai-delivery-banking-platform

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agenticops-toolkit/: README.md
agenticops-toolkit/checklists/: ai-assisted-coding.md  mlops-release.md
agenticops-toolkit/prompts/: code-review.md  genai-evaluation.md  implementation.md
agenticops-toolkit/templates/: module-readme.md
agenticops_toolkit/: __init__.py  __main__.py  scaffold.py
banking-rag-agent/: README.md
banking-rag-agent/data/: banking_documents.jsonl  evaluation_questions.jsonl
banking-rag-agent/scripts/: run_evaluation.py  run_graph.py  run_langgraph.py
banking-rag-agent/tests/: test_answering.py  test_evaluation.py  test_graph.py  test_langgraph_workflow.py  test_llm_adapter.py  test_pipeline.py  test_retrieval.py
credit-risk-mlops/: .dockerignore  Dockerfile  README.md
credit-risk-mlops/docs/: interview_notes.md
credit-risk-mlops/k8s/: api-deployment.yaml  api-service.yaml
credit-risk-mlops/models/: baseline_logistic_regression.joblib
credit-risk-mlops/scripts/: consume_events.py  predict_sample.py  run_eda.py  run_monitoring.py  run_monitoring_agent.py  train_baseline.py
credit-risk-mlops/src/credit_risk_mlops/: api.py  (+11 more)
credit-risk-mlops/tests/: test_agentic_monitoring.py  test_api.py  test_data_generation.py  test_database.py  test_eda.py  test_events.py  test_experiment_tracking.py  test_inference.py  test_modeling.py  test_monitoring.py
docs/: roadmap.md  skill-mapping.md
tests/: test_model_persistence.py  test_scaffold.py
(+8 files in other folders)
