[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-delivery-banking-platform"
version = "0.1.0"
description = "Portfolio monorepo for ML, GenAI, Agentic AI, and MLOps in banking."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "mlflow>=2.14",
    "joblib>=1.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "httpx2>=0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agenticops_toolkit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

